--- a/_data/app-nav-tab2.json
+++ b/_data/app-nav-tab2.json
@@ -5,7 +5,7 @@
       "counter":"",
       "items": [
         {
-          "label": "PRODUCT DEVELOPMENT",
+          "label": "PRODUCT DEVELOPMENT TESTING A VERY LONG LABEL TO SEE IF ELLIPSIS EVENTUALY WILL WORK",
           "name": "BI Bugs Stats"
         },
         {
