appnavtab2: added icon for list and smartlist

--- a/_data/app-nav-tab2.json
+++ b/_data/app-nav-tab2.json
@@ -6,27 +6,33 @@
       "items": [
         {
           "label": "PRODUCT DEVELOPMENT TESTING A VERY LONG LABEL TO SEE IF ELLIPSIS EVENTUALY WILL WORK",
-          "name": "BI Bugs Stats"
+          "name": "BI Bugs Stats",
+          "prefix": ""
         },
         {
           "label": "PRODUCT DEVELOPMENT",
-          "name": "BI product sprints"
+          "name": "BI product sprints",
+          "prefix": ""
         },
         {
           "label": "PRODUCT DEVELOPMENT",
-          "name": "BI strategic goals"
+          "name": "BI strategic goals",
+          "prefix": ""
         },
         {
           "label": "PRODUCT DEVELOPMENT",
-          "name": "bugs created last month"
+          "name": "bugs created last month",
+          "prefix": ""
         },
         {
           "label": "PRODUCT DEVELOPMENT",
-          "name": "Closed Last month with rootcause"
+          "name": "Closed Last month with rootcause",
+          "prefix": ""
         },
         {
           "label": "PRODUCT DEVELOPMENT",
-          "name": "Milestone Spaghetti by WorkType"
+          "name": "Milestone Spaghetti by WorkType",
+          "prefix": ""
         }
       ]
     },
@@ -37,23 +43,28 @@
       "items": [
         {
           "label": "PRODUCT DEVELOPMENT",
-          "name": "DEVCENTER_Cooking"
+          "name": "DEVCENTER_Cooking",
+          "prefix": ""
         },
         {
           "label": "PRODUCT DEVELOPMENT",
-          "name": "DEVCENTER_Served"
+          "name": "DEVCENTER_Served",
+          "prefix": ""
         },
         {
           "label": "PMX PROJECTS AND SUPPORT",
-          "name": "All remaining projects & SRs (MSProject)"
+          "name": "All remaining projects & SRs (MSProject)",
+          "prefix": ""
         },
         {
           "label": "PMX PROJECTS AND SUPPORT",
-          "name": "Budget Overrun Projects And Services"
+          "name": "Budget Overrun Projects And Services",
+          "prefix": ""
         },
         {
           "label": "PRODUCT DEVELOPMENT",
-          "name": "Backlog Health"
+          "name": "Backlog Health",
+          "prefix": ""
         }
       ]
     },
@@ -64,27 +75,33 @@
       "items": [
         {
           "label": "OPERATIONS",
-          "name": "IT Requests"
+          "name": "IT Requests",
+          "prefix": ""
         },
         {
           "label": "OPERATIONS",
-          "name": "IT Tasks"
+          "name": "IT Tasks",
+          "prefix": ""
         },
         {
           "label": "OPERATIONS",
-          "name": "Open IT Tickets (Sys-admin)"
+          "name": "Open IT Tickets (Sys-admin)",
+          "prefix": ""
         },
         {
           "label": "PROF. SERV.",
-          "name": "Financial Milestones"
+          "name": "Financial Milestones",
+          "prefix": ""
         },
         {
           "label": "PROF. SERV.",
-          "name": "OOO Requests"
+          "name": "OOO Requests",
+          "prefix": ""
         },
         {
           "label": "PROF. SERV.",
-          "name": "Work Orders"
+          "name": "Work Orders",
+          "prefix": ""
         }
       ]
     }
